@@ -1,3 +1,9 @@
+2006-03-08  Michael Koch  <konqueror@gmx.de>
+
+	* java/net/Proxy.java (NO_PROXY): Made final.
+	(equals): Likewise.
+	(hashCode): Likewise.
+
 2006-03-07  Michael Koch  <konqueror@gmx.de>
 
 	* gnu/java/net/DefaultProxySelector.java,
